--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,11 @@
 apply plugin: 'com.android.application'
 
 android {
+    externalNativeBuild {
+        cmake {
+            version "3.6.0"
+        }
+    }
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
     defaultConfig {
@@ -34,6 +39,9 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.android.material:material:1.1.0'
+
+    //gson
+    implementation 'com.google.code.gson:gson:2.8.5'
 
     // map view
     implementation 'com.google.android.gms:play-services-maps:16.1.0'
